--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -32,11 +32,20 @@ body {
   padding: 0;
   margin: 0;
   max-width: 300px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1), 0 5px 50px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  overflow: hidden !important;
 
   p {
     margin: 0;
     padding: 0;
     font-size: 14px;
+  }
+
+  .header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
 
@@ -112,7 +121,7 @@ body {
     }
 
     &:focus ~ .bar:before {
-      width: $width;
+      width: 100%;
     }
   }
 
@@ -134,13 +143,13 @@ body {
   .bar {
     position: relative;
     display: block;
-    width: $width;
+    width: 100%;
 
     &:before {
       content: '';
       height: 2px;
       width: 0;
-      bottom: 0px;
+      bottom: 0;
       position: absolute;
       background: $hl-color;
       transition: $trans-time ease all;
