--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,270 +1,20 @@
-$bg-color: #424242;
-$hl-color: #2196F3;
-$muted-color: mix(white, $bg-color, 70%);
-$trans-time: 300ms;
-$width: 320px;
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import './material';
+@import './chat-button';
+@import './form';
+@import './varibles';
 
 html {
-  display: flex;
-  height: 100%;
+    display: flex;
+    height: 100%;
 }
 
 body {
-  height: 100%;
-  margin: 0;
-  width: 100%;
-  background: $bg-color;
-  color: #fff;
-  text-align: center;
-  font-size: 24px;
-}
-
-#via-connect {
-  position: fixed;
-  right: 20px;
-  bottom: 20px;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-  transition-property: visibility, opacity;
-  backface-visibility: hidden;
-  display: block;
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  max-width: 300px;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1), 0 5px 50px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  overflow: hidden !important;
-
-  p {
+    height: 100%;
     margin: 0;
-    padding: 0;
-    font-size: 14px;
-  }
-
-  .header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-
-  *,
-  :before,
-  :after {
-    box-sizing: border-box;
-  }
-
-  // FORM // ============================== //
-  form {
-
-    h1 {
-      font-size: 1em;
-      font-weight: 300;
-      text-align: center;
-      color: $hl-color;
-    }
-
-    h5 {
-      text-align: center;
-      text-transform: uppercase;
-      color: $muted-color;
-    }
-
-    hr.sep {
-      background: $hl-color;
-      box-shadow: none;
-      border: none;
-      height: 2px;
-      width: 25%;
-      margin: 0px auto 45px auto;
-    }
-
-    .emoji {
-      font-size: 1.2em;
-    }
-  }
-
-  .group {
-    position: relative;
-    &:not(:last-of-type) {
-      margin-bottom: 15px;
-    }
-  }
-
-  // INPUTS // ============================== //
-  textarea {
-    resize: none;
-  }
-
-  input,
-  textarea {
-    background: none;
-    color: $muted-color;
-    font-size: 18px;
-    padding: 10px 10px 10px 5px;
-    display: block;
-    width: $width;
-    border: none;
-    border-radius: 0;
-    border-bottom: 1px solid $muted-color;
-
-    &:focus {
-      outline: none;
-    }
-
-    &:focus ~ label,
-    &:valid ~ label {
-      top: -7px;
-      font-size: 12px;
-      color: $hl-color;
-    }
-
-    &:focus ~ .bar:before {
-      width: 100%;
-    }
-  }
-
-  input[type="password"] {
-    letter-spacing: 0.3em;
-  }
-
-  label {
-    color: $muted-color;
-    font-size: 12px;
-    font-weight: normal;
-    position: absolute;
-    pointer-events: none;
-    left: 5px;
-    top: 15px;
-    transition: $trans-time ease all;
-  }
-
-  .bar {
-    position: relative;
-    display: block;
     width: 100%;
-
-    &:before {
-      content: '';
-      height: 2px;
-      width: 0;
-      bottom: 0;
-      position: absolute;
-      background: $hl-color;
-      transition: $trans-time ease all;
-      left: 0;
-    }
-  }
-
-  // BUTTONS // ============================== //
-  .btn {
-    background: #fff;
-    color: mix(black, $muted-color, 25%);
-    border: none;
-    padding: 10px 20px;
-    border-radius: 3px;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    text-decoration: none;
-    outline: none;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-
-    &:hover {
-      color: mix(black, $muted-color, 30%);
-      box-shadow: 0 7px 14px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);
-    }
-
-    &.btn-link {
-      background: $hl-color;
-      color: mix(white, $hl-color, 80%);
-
-      &:hover {
-        background: darken($hl-color, 5%);
-        color: mix(white, $hl-color, 85%);
-      }
-    }
-
-    &.btn-submit {
-      background: $hl-color;
-      color: mix(white, $hl-color, 70%);
-
-      &:hover {
-        background: darken($hl-color, 5%);
-        color: mix(white, $hl-color, 85%);
-      }
-    }
-
-    &.btn-cancel {
-      background: #eee;
-
-      &:hover {
-        background: darken(#eee, 5%);
-        color: mix(black, $muted-color, 30%);
-      }
-    }
-  }
-
-  .btn-box {
-    text-align: center;
-    margin-bottom: 10px;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    user-select: none;
-    outline:0;
-  }
-}
-
-#via-connect__form-body {
-  padding: .5em;
-  background: #f6f6f8;
-}
-
-#via-connect__header-wrapper {
-  background: #3677e0;
-
-  p {
-    margin: 0;
-    text-align: center;
-    padding: 10px;
+    background: $bg-color;
     color: #fff;
-    font-weight: 600;
-  }
-}
-
-#via-connect__form-wrapper {
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1), 0 5px 50px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  overflow: hidden !important;
-}
-
-#via-connect__message-wrapper {
-  padding: .5em;
-  background: #fff;
-  border-radius: 0;
-  border-radius: 10px 10px 10px 0;
-  overflow: hidden;
-  color: #828385;
-  margin-left: 0;
-  margin-right: 20px;
-  margin-bottom: 10px;
-  text-align: start;
-
-  input, textarea {
-    width: 100%;
-    font-size: 14px;
-  }
-
-  &.blue {
-    background: #e3eaf1;
-  }
-
-  &.right {
-    margin-right: 0;
-    margin-left: 20px;
-    border-radius: 0;
-    border-radius: 10px 10px 0 10px;
-  }
+    text-align: center;
+    font-size: 24px;
 }
