success message added

--- a/src/styles/_varibles.scss
+++ b/src/styles/_varibles.scss
@@ -10,3 +10,9 @@ $circle-size: 45px;
 $outside-circle-size: $circle-size + 10px;
 $outside-circle-border: 2px;
 $outside-circle-margin: (($outside-circle-size / 2) + $outside-circle-border) * -1;
+
+// colors
+$blue1: #dae7fe;
+$blue2: #e3eaf1;
+$gray1: #aaaaaa;
+$gray2: #bdc6cc;
