--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -22,22 +22,17 @@
         opacity: 1;
         bottom: 90px;
     }
-
-    p {
-        margin: 0;
-        padding: 0;
-        font-size: 12px;
-    }
 }
 
 .form-body {
-    padding: 10px;
+    padding: 15px;
     background: #f6f6f8;
 
     .form {
         .agreement {
             text-align: center;
             color: $p-color;
+            margin-top: 10px !important;
             padding: 0 20px !important;
             font-size: 10px !important;
         }
@@ -52,7 +47,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px;
+    padding: 15px;
+
+    p {
+        margin: 0;
+        padding: 0;
+    }
 
     svg {
         margin-inline-end: 10px;
@@ -64,43 +64,93 @@
 
     p {
         color: #fff;
-        font-size: 14px !important;
+        font-size: 14px;
     }
 }
 
 .footer {
     background: #fff;
+    margin-top: -15px;
+    padding: 10px;
 
     p {
         color: $p-color;
-        font-size: 12px !important;
+        font-size: 10px;
     }
 }
 
 .message-wrapper {
-    padding: 10px;
-    background: #fff;
-    overflow: hidden;
-    color: #828385;
-    margin-bottom: 10px;
-    text-align: start;
+        margin-bottom: 15px;
 
-    input, textarea {
-        width: 100%;
-        font-size: 14px;
+    h5 {
+        margin: 0 0 10px;
+        color: $gray1;
     }
 
-    &.right {
-        margin-inline-start: 20px;
-        border-radius: 10px 10px 0 10px;
+    p {
+        margin: 0;
+        padding: 0;
+        font-size: 12px;
+    }
+    
+    .status {
+        text-align: right;
+        font-size: 10px;
+        display: block;
+        color: $gray2;
+        margin-top: 5px;
     }
 
-    &.left {
-        margin-inline-end: 20px;
-        border-radius: 10px 10px 10px 0;
-    }
+    .message {
+        padding: 15px;
+        background: #fff;
+        overflow: hidden;
+        color: #828385;
+        text-align: start;
 
-    &.blue {
-        background: #e3eaf1;
+        input, textarea {
+            width: 100%;
+            font-size: 14px;
+        }
+
+        &.right {
+            margin-inline-start: 20px;
+            border-radius: 15px 15px 0 15px;
+            background: $blue1;
+        }
+
+        &.left {
+            margin-inline-end: 20px;
+            border-radius: 15px 15px 15px 0;
+            background: $blue2;
+        }
+
+        &.clear {
+            background-color: #fff;
+        }
+
+        &__header {
+            text-align: center;
+            color: $main-color;
+        }
+        &__body {
+            text-align: center;
+            h3 {
+                margin: 0 0 10px;
+                font-weight: 600;
+                font-size: 14px !important;
+            }
+            p {
+                color: $gray2;
+                margin-bottom: 10px;
+            }
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: #fff;
+            margin: 13px -15px -15px;
+            padding: 15px;
+        }
     }
 }
