--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -1,160 +1,214 @@
 @import './varibles';
 
 #via-connect {
-    position: fixed;
-    right: 20px;
-    bottom: 80px;
-    -webkit-transition: .2s linear;
-    transition: .2s linear;
-    transition-property: visibility, opacity, bottom;
-    backface-visibility: hidden;
-    display: block;
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    max-width: 300px;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1), 0 5px 50px rgba(0, 0, 0, 0.2);
-    border-radius: 6px;
-    overflow: hidden;
-    visibility: hidden;
-    opacity: 0;
+  position: fixed;
+  right: 20px;
+  bottom: 80px;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+  transition-property: visibility, opacity, bottom;
+  backface-visibility: hidden;
+  display: block;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  max-width: 300px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1), 0 5px 50px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  overflow: hidden;
+  visibility: hidden;
+  opacity: 0;
 
-    &.visible {
-        opacity: 1;
-        bottom: 90px;
-        z-index: 1000;
-        visibility: visible;
-    }
+
+  &.visible {
+    opacity: 1;
+    bottom: 90px;
+    z-index: 1000;
+    visibility: visible;
+  }
 }
 
 .form-body {
-    padding: 0 15px 15px;
-    background: #f6f6f8;
-    max-height: 500px;
-    overflow: auto;
+  padding: 0 15px 15px;
+  background: $gray3;
+  max-height: 500px;
+  overflow: auto;
+  position: relative;
 
-    .form {
-        .agreement {
-            text-align: center;
-            color: $p-color;
-            margin-top: 10px !important;
-            padding: 0 20px !important;
-            font-size: 10px !important;
-        }
-    }
-
-    .submit {
-        margin-top: 20px;
-    }
-}
-
-.header, .footer {
+  .loading {
+    left: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.52);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 10;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 15px;
 
-    p {
-        margin: 0;
-        padding: 0;
+    span {
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      border: 3px solid rgba(255, 255, 255, .3);
+      border-radius: 50%;
+      border-top-color: #fff;
+      animation: spin .75s ease-in-out infinite;
     }
+  }
 
-    svg {
-        margin-inline-end: 10px;
+  .form {
+    .agreement {
+      text-align: center;
+      color: $p-color;
+      margin-top: 10px !important;
+      padding: 0 20px !important;
+      font-size: 10px !important;
     }
+  }
+
+  .submit {
+    margin-top: 10px;
+    height: 35px;
+    width: 80px;
+
+    a {
+      display: flex;
+      width: 100%;
+      height: 100%;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+}
+
+.header, .footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+
+  p {
+    margin: 0;
+    padding: 0;
+  }
+
+  svg {
+    margin-inline-end: 10px;
+    margin-right: 10px;
+  }
 }
 
 .header {
-    background: $main-color;
+  background: $main-color;
+  color: #fff;
 
-    p {
-        color: #fff;
-        font-size: 14px;
-    }
+  p {
+    font-size: 14px !important;
+    color: inherit;
+  }
+
+  .svg {
+    fill: currentColor;
+  }
+
+
 }
 
 .footer {
-    background: #fff;
-    padding: 10px;
+  background: #fff;
+  padding: 10px;
 
-    p {
-        color: $p-color;
-        font-size: 10px;
-    }
+  p {
+    color: $p-color;
+    font-size: 10px;
+  }
 }
 
 .message-wrapper {
-        padding-top: 15px;
+  padding-top: 15px;
 
-    h5 {
+  h5 {
+    margin: 0 0 10px;
+    color: $gray1;
+  }
+
+  p {
+    margin: 0;
+    padding: 0;
+    font-size: 12px;
+  }
+
+  .status {
+    text-align: right;
+    font-size: 10px;
+    display: block;
+    color: $gray2;
+    margin-top: 5px;
+  }
+
+  .message {
+    padding: 15px;
+    background: #fff;
+    overflow: hidden;
+    color: #828385;
+    text-align: start;
+    text-align: left;
+
+    input, textarea {
+      width: 100%;
+      font-size: 14px;
+    }
+
+    &.right {
+      margin-inline-start: 20px;
+      border-radius: 15px 15px 0 15px;
+      background: $blue1;
+    }
+
+    &.left {
+      margin-inline-end: 20px;
+      border-radius: 15px 15px 15px 0;
+      background: $blue2;
+    }
+
+    &.clear {
+      background-color: #fff;
+    }
+
+    &__header {
+      text-align: center;
+      color: $main-color;
+    }
+
+    &__body {
+      text-align: center;
+
+      h3 {
         margin: 0 0 10px;
-        color: $gray1;
-    }
+        font-weight: 600;
+        font-size: 14px !important;
+      }
 
-    p {
-        margin: 0;
-        padding: 0;
-        font-size: 12px;
-    }
-    
-    .status {
-        text-align: right;
-        font-size: 10px;
-        display: block;
+      p {
         color: $gray2;
-        margin-top: 5px;
+        margin-bottom: 10px;
+      }
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background-color: #fff;
+      margin: 13px -15px -15px;
+      padding: 15px;
     }
+  }
+}
 
-    .message {
-        padding: 15px;
-        background: #fff;
-        overflow: hidden;
-        color: #828385;
-        text-align: start;
-
-        input, textarea {
-            width: 100%;
-            font-size: 14px;
-        }
-
-        &.right {
-            margin-inline-start: 20px;
-            border-radius: 15px 15px 0 15px;
-            background: $blue1;
-        }
-
-        &.left {
-            margin-inline-end: 20px;
-            border-radius: 15px 15px 15px 0;
-            background: $blue2;
-        }
-
-        &.clear {
-            background-color: #fff;
-        }
-
-        &__header {
-            text-align: center;
-            color: $main-color;
-        }
-        &__body {
-            text-align: center;
-            h3 {
-                margin: 0 0 10px;
-                font-weight: 600;
-                font-size: 14px !important;
-            }
-            p {
-                color: $gray2;
-                margin-bottom: 10px;
-            }
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            background-color: #fff;
-            margin: 13px -15px -15px;
-            padding: 15px;
-        }
-    }
+@keyframes spin {
+  to {
+    -webkit-transform: rotate(360deg);
+  }
 }
