--- a/src/styles/_material.scss
+++ b/src/styles/_material.scss
@@ -1,173 +1,191 @@
 @import './varibles';
 
 #via-connect {
-    *,
-    :before,
-    :after {
-        box-sizing: border-box;
-        font-family: 'Roboto', sans-serif;
-        font-size: 12px;
+  *,
+  :before,
+  :after {
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+  }
+
+  // FORM // ============================== //
+  form {
+
+    h1 {
+      font-size: 1em;
+      font-weight: 300;
+      text-align: center;
+      color: $main-color;
     }
 
-    // FORM // ============================== //
-    form {
-
-        h1 {
-            font-size: 1em;
-            font-weight: 300;
-            text-align: center;
-            color: $main-color;
-        }
-
-        h5 {
-            text-align: center;
-            text-transform: uppercase;
-            color: $muted-color;
-        }
-
-        hr.sep {
-            background: $main-color;
-            box-shadow: none;
-            border: none;
-            height: 2px;
-            width: 25%;
-            margin: 0px auto 45px auto;
-        }
-
-        .emoji {
-            font-size: 1.2em;
-        }
+    h5 {
+      text-align: center;
+      text-transform: uppercase;
+      color: $muted-color;
     }
 
-    .group {
-        position: relative;
-
-        &:not(:last-of-type) {
-            margin-bottom: 15px;
-        }
+    hr.sep {
+      background: $main-color;
+      box-shadow: none;
+      border: none;
+      height: 2px;
+      width: 25%;
+      margin: 0 auto 45px auto;
     }
 
-    // INPUTS // ============================== //
-    textarea {
-        resize: none;
+    .emoji {
+      font-size: 1.2em;
+    }
+  }
+
+  .group {
+    position: relative;
+
+    &:not(:last-of-type) {
+      margin-bottom: 15px;
+    }
+  }
+
+  // INPUTS // ============================== //
+  textarea {
+    resize: none;
+    -ms-overflow-style: none
+  }
+
+  input,
+  textarea {
+    background: none;
+    color: $muted-color;
+    padding: 8px 8px 6px 5px;
+    display: block;
+    width: 100%;
+    border: none;
+    border-radius: 0;
+    border-bottom: 1px solid $muted-color;
+    font-size: 14px;
+
+    &:focus {
+      outline: none;
     }
 
-    input,
-    textarea {
-        background: none;
-        color: $muted-color;
-        padding: 8px 8px 8px 5px;
-        display: block;
-        width: 100%;
-        border: none;
-        border-radius: 0;
-        border-bottom: 1px solid $muted-color;
-        font-size: 14px;
-
-        &:focus {
-            outline: none;
-        }
-
-        &:focus ~ label,
-        &:valid ~ label {
-            top: -7px;
-            font-size: 12px;
-            color: $main-color;
-        }
-
-        &:focus ~ .bar:before {
-            width: 100%;
-        }
+    &:placeholder-shown ~ label {
+      top: 13px !important;
+      color: $muted-color !important;
     }
 
-    input[type="password"] {
-        letter-spacing: 0.3em;
+    &:focus ~ label {
+      top: -8px !important;
+      font-size: 12px;
+      color: $main-color !important;
+    }
+    &:valid ~ label {
+      top: -8px;
+      font-size: 12px;
+      color: $main-color;
     }
 
-    label {
-        color: $muted-color;
-        font-size: 12px;
-        font-weight: normal;
-        position: absolute;
-        pointer-events: none;
-        left: 5px;
-        top: 15px;
-        transition: $trans-time ease all;
+    &:focus ~ .bar:before {
+      width: 100%;
+    }
+  }
+
+  input[type="password"] {
+    letter-spacing: 0.3em;
+  }
+
+  input[type=number]::-webkit-inner-spin-button,
+  input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  input[type="textarea"] {
+    -moz-appearance: textfield;
+  }
+
+  label {
+    color: $muted-color;
+    font-size: 12px;
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 5px;
+    top: 13px;
+    transition: $trans-time ease all;
+  }
+
+  .bar {
+    position: relative;
+    display: block;
+    width: 100%;
+
+    &:before {
+      content: '';
+      height: 2px;
+      width: 0;
+      bottom: 0;
+      position: absolute;
+      background: $main-color;
+      transition: $trans-time ease all;
+      left: 0;
+    }
+  }
+
+  // BUTTONS // ============================== //
+  .btn {
+    background: #fff;
+    color: mix(black, $muted-color, 25%);
+    border: none;
+    border-radius: 3px;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    text-decoration: none;
+    outline: none;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+
+    &:hover {
+      color: mix(black, $muted-color, 30%);
+      box-shadow: 0 7px 14px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);
     }
 
-    .bar {
-        position: relative;
-        display: block;
-        width: 100%;
+    &.btn-link {
+      background: $main-color;
+      color: #fff;
 
-        &:before {
-            content: '';
-            height: 2px;
-            width: 0;
-            bottom: 0;
-            position: absolute;
-            background: $main-color;
-            transition: $trans-time ease all;
-            left: 0;
-        }
+      &:hover {
+        background: darken($main-color, 5%);
+        color: #fff;
+      }
     }
 
-    // BUTTONS // ============================== //
-    .btn {
-        background: #fff;
-        color: mix(black, $muted-color, 25%);
-        border: none;
-        padding: 10px 20px;
-        border-radius: 3px;
-        letter-spacing: 0.06em;
-        text-transform: uppercase;
-        text-decoration: none;
-        outline: none;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    &.btn-submit {
+      background: $main-color;
+      color: mix(white, $main-color, 70%);
 
-        &:hover {
-            color: mix(black, $muted-color, 30%);
-            box-shadow: 0 7px 14px rgba(0, 0, 0, 0.18), 0 5px 5px rgba(0, 0, 0, 0.12);
-        }
-
-        &.btn-link {
-            background: $main-color;
-            color: #fff;
-
-            &:hover {
-                background: darken($main-color, 5%);
-                color: #fff;
-            }
-        }
-
-        &.btn-submit {
-            background: $main-color;
-            color: mix(white, $main-color, 70%);
-
-            &:hover {
-                background: darken($main-color, 5%);
-                color: mix(white, $main-color, 85%);
-            }
-        }
-
-        &.btn-cancel {
-            background: #eee;
-
-            &:hover {
-                background: darken(#eee, 5%);
-                color: mix(black, $muted-color, 30%);
-            }
-        }
+      &:hover {
+        background: darken($main-color, 5%);
+        color: mix(white, $main-color, 85%);
+      }
     }
 
-    .btn-box {
-        text-align: center;
-        margin-bottom: 10px;
-        background: transparent;
-        border: none;
-        cursor: pointer;
-        user-select: none;
-        outline: 0;
+    &.btn-cancel {
+      background: #eee;
+
+      &:hover {
+        background: darken(#eee, 5%);
+        color: mix(black, $muted-color, 30%);
+      }
     }
+  }
+
+  .btn-box {
+    text-align: center;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    user-select: none;
+    outline: 0;
+  }
 }
