--- a/src/styles/_chat-button.scss
+++ b/src/styles/_chat-button.scss
@@ -5,56 +5,56 @@
     right: 20px;
     bottom: 20px;
     z-index: 1000;
-}
 
-.button {
-    text-align: center;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: 100;
-    font-family: 'Roboto';
-    letter-spacing: 1px;
+    .via-connect__button {
+        text-align: center;
+        text-transform: uppercase;
+        text-decoration: none;
+        font-size: 14px;
+        font-weight: 100;
+        font-family: 'Roboto';
+        letter-spacing: 1px;
 
-    &:before {
-        border-radius: $circle-size;
-        border: $outside-circle-border solid;
-        border-color: inherit;
-        box-shadow: 0 0 15px rgba(0, 255, 204, 0.15), 0 0 15px rgba(0, 255, 204, 0.15) inset;
-        content: "";
-        display: block;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        height: $outside-circle-size;
-        width: $outside-circle-size;
-        margin-left: $outside-circle-margin;
-        margin-top: $outside-circle-margin;
-        opacity: 1;
-        transform: scale(1);
-        transition: all 300ms;
-    }
+        &:before {
+            border-radius: $circle-size;
+            border: $outside-circle-border solid;
+            border-color: inherit;
+            box-shadow: 0 0 15px rgba(0, 255, 204, 0.15), 0 0 15px rgba(0, 255, 204, 0.15) inset;
+            content: "";
+            display: block;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            height: $outside-circle-size;
+            width: $outside-circle-size;
+            margin-left: $outside-circle-margin;
+            margin-top: $outside-circle-margin;
+            opacity: 1;
+            transform: scale(1);
+            transition: all 300ms;
+        }
 
-    &:hover:before {
-        transform: scale(1.05);
-    }
+        &:hover:before {
+            transform: scale(1.05);
+        }
 
-    &.circle {
-        background: inherit;
-        border: none;
-        border-radius: 900px;
-        cursor: pointer;
-        width: $circle-size;
-        height: $circle-size;
-        line-height: $circle-size;
-        position: relative;
-        transition: 0.5s;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        &.via-connect__circle {
+            background: inherit;
+            border: none;
+            border-radius: 900px;
+            cursor: pointer;
+            width: $circle-size;
+            height: $circle-size;
+            line-height: $circle-size;
+            position: relative;
+            transition: 0.5s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
 
-        &:hover {
-            padding: -2px;
+            &:hover {
+                padding: -2px;
+            }
         }
     }
 }
